Fixed alignment issues in crew page

--- a/Solution1/css/backToTopButton.css
+++ b/Solution1/css/backToTopButton.css
@@ -1,73 +1,67 @@
-#scroll-top-link a.scroll-top-a{
-    position: absolute;
-    bottom: 20px;
-    height: 50px;
-    left: 50%;
-    z-index: 2;
-    display: inline-block;
+#scroll-top-link{
+	position: absolute;
+	bottom: -35px;
+	left: 45%;
+	z-index: 12;
+	display: inline-block;
+}
 
-  }
+#scroll-top-link a {
+	display: inline-block;
+	-webkit-transform: translate(0, -50%);
+	-moz-transform: translate(0, -50%);
+	-ms-transform: translate(0, -50%);
+	-o-transform: translate(0, -50%);
+	transform: translate(0, -50%);
+	padding-top: 60px;
+	letter-spacing: .1em;
+	text-decoration: none;
+	transition: opacity .3s;
 
-#scroll-top-link a.scroll-top-a{
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    z-index: 2;
-    display: inline-block;
-    -webkit-transform: translate(0, -50%);
-    transform: translate(0, -50%);
+	font-family: 'Source Sans Pro';
+	font-weight: bolder;
+	color: #000;
+	font-size: 12px;
+}
+  
+#scroll-top-link a:hover {
+	opacity: .75;
+}
 
-    font-family: 'Source Sans Pro';
-    font-weight: bolder;
-    color: #000;
-    font-size: 12px;
-    text-decoration: none;
-    transition: opacity .3s;
-    line-height: 70px;
-  }
-  #scroll-top-link a.scroll-top-a:hover {
-    opacity: .5;
-  }
-  
-  
-  
-  #scroll-top-link a.scroll-top-a {
-    padding-top: 60px;
-  }
-  #scroll-top-link a.scroll-top-a span {
+#scroll-top-link a span {
     position: absolute;
-    top: 90%;
-    left: 50%;
-    width: 24px;
-    height: 24px;
-    margin-left: -12px;
+    top: 20%;
+    left: 53%;
+    width: 25px;
+    height: 25px;
+    margin-left: -15px;
+	
     border-left: 3px solid #000;
+    box-sizing: border-box;
     border-bottom: 3px solid #000;
     -webkit-transform: rotate(135deg);
     transform: rotate(135deg);
-    box-sizing: border-box;
-  }
+}
 
-  #scroll-top-link a.scroll-top-a:hover span{
-    -webkit-animation: sdb04 2s infinite;
-    animation: sdb04 2s infinite;
-    box-sizing: border-box;
-  }
+#scroll-top-link a.scroll-top-a:hover span{
+-webkit-animation: sdb04 2s infinite;
+animation: sdb04 2s infinite;
+box-sizing: border-box;
+}
 
-  @-webkit-keyframes sdb04 {
-    0% {
-      -webkit-transform: rotate(135deg) translate(0, 0);
-    }
-    20% {
-      -webkit-transform: rotate(135deg) translate(-10px, 10px);
-    }
-  }
-  @keyframes sdb04 {
-    0% {
-      transform: rotate(135deg) translate(0, 0);
-    }
-    20% {
-      transform: rotate(135deg) translate(-10px, 10px);
-    }
-  }
-  
+@-webkit-keyframes sdb04 {
+0% {
+  -webkit-transform: rotate(135deg) translate(0, 0);
+}
+20% {
+  -webkit-transform: rotate(135deg) translate(-10px, 10px);
+}
+}
+@keyframes sdb04 {
+0% {
+  transform: rotate(135deg) translate(0, 0);
+}
+20% {
+  transform: rotate(135deg) translate(-10px, 10px);
+}
+}
